added gradio code to hair_care notebook

--- a/hair_care.ipynb
+++ b/hair_care.ipynb
@@ -353,6 +353,141 @@
     "    for doc in result[\"source_documents\"]:\n",
     "        print(\"-\", doc.metadata.get(\"source\", \"No source\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9ad36f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "import re\n",
+    "import language_tool_python\n",
+    "\n",
+    "\n",
+    "tool = language_tool_python.LanguageToolPublicAPI('en-US')\n",
+    "\n",
+    "# -- Helper Functions --\n",
+    "def fix_common_contractions(text):\n",
+    "    text = re.sub(r\"\\bIm\\b\", \"I'm\", text)\n",
+    "    text = re.sub(r\"\\bi\\b\", \"I\", text)\n",
+    "    text = re.sub(r\"\\bdont\\b\", \"don't\", text)\n",
+    "    text = re.sub(r\"\\bdoesnt\\b\", \"doesn't\", text)\n",
+    "    # Add more as needed\n",
+    "    return text\n",
+    "\n",
+    "def correct_grammar(text):\n",
+    "    matches = tool.check(text)\n",
+    "    return language_tool_python.utils.correct(text, matches)\n",
+    "\n",
+    "def clean_answer(text):\n",
+    "    text = fix_common_contractions(text)\n",
+    "    text = correct_grammar(text)\n",
+    "    return text.strip()\n",
+    "\n",
+    "# Optional: shorten long context\n",
+    "def shorten_context(docs, max_chars=2000):\n",
+    "    content = \"\"\n",
+    "    for doc in docs:\n",
+    "        if len(content) + len(doc.page_content) > max_chars:\n",
+    "            break\n",
+    "        content += doc.page_content + \"\\n\\n\"\n",
+    "    return content.strip()\n",
+    "\n",
+    "# Format user query + system prompt\n",
+    "def format_query(query, context):\n",
+    "    return f\"\"\"You are a helpful hair care assistant. Use the following context to answer the question.\n",
+    "\n",
+    "Context:\n",
+    "{context}\n",
+    "\n",
+    "Question: {query}\n",
+    "\n",
+    "Helpful answer:\"\"\"\n",
+    "\n",
+    "# Main query function\n",
+    "def answer_query(query):\n",
+    "    retrieved_docs = rag_chain.retriever.invoke(query)\n",
+    "    context = shorten_context(retrieved_docs)\n",
+    "    prompt = format_query(query, context)\n",
+    "\n",
+    "    result = rag_chain.invoke(prompt)\n",
+    "    answer = clean_answer(result[\"result\"])\n",
+    "\n",
+    "    sources = \"\\n\".join([doc.metadata.get(\"source\", \"Unknown\") for doc in result.get(\"source_documents\", [])])\n",
+    "    return answer, sources\n",
+    "\n",
+    "# -- Gradio UI --\n",
+    "with gr.Blocks(title=\"AI HAIR CARE RECOMMENDER\", css=\"\"\"\n",
+    "    body {\n",
+    "        background: linear-gradient(to right, #fff8f0, #fef6ec);\n",
+    "        font-family: 'Segoe UI', sans-serif;\n",
+    "        color: #333;\n",
+    "    }\n",
+    "    .gr-button-primary {\n",
+    "        background-color: #6a5acd !important;\n",
+    "        color: white !important;\n",
+    "        font-size: 16px !important;\n",
+    "        padding: 10px 20px !important;\n",
+    "        border-radius: 8px !important;\n",
+    "    }\n",
+    "    .gr-button-primary:hover {\n",
+    "        background-color: #5a4bb5 !important;\n",
+    "    }\n",
+    "    .gr-button-secondary {\n",
+    "        background-color: #f08080 !important;\n",
+    "        color: white !important;\n",
+    "        font-size: 16px !important;\n",
+    "        padding: 10px 20px !important;\n",
+    "        border-radius: 8px !important;\n",
+    "    }\n",
+    "    .gr-button-secondary:hover {\n",
+    "        background-color: #e66767 !important;\n",
+    "    }\n",
+    "    textarea {\n",
+    "        font-size: 16px !important;\n",
+    "        padding: 12px;\n",
+    "        border-radius: 6px;\n",
+    "    }\n",
+    "\"\"\") as demo:\n",
+    "\n",
+    "    gr.Markdown(\n",
+    "        \"\"\"\n",
+    "        <div style='text-align: center; font-size: 32px; font-weight: bold; color: #6a5acd;'>AI HAIR CARE RECOMMENDER</div>\n",
+    "        <div style='text-align: center; font-size: 18px; margin-bottom: 20px; color: #444;'>\n",
+    "            Ask personalized questions about dandruff, hair loss, dryness, oily scalp, breakage, or growth. Get AI-powered recommendations with sources.\n",
+    "        </div>\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    with gr.Row():\n",
+    "        input = gr.Textbox(label='Question', lines=5, placeholder=\"Ask your hair care question here...\")\n",
+    "        output = gr.Textbox(label=\"AI's Recommendation\", lines=6,placeholder=\"AI hair care assisstant's response\")\n",
+    "\n",
+    "    with gr.Row():\n",
+    "        sources_output = gr.Textbox(label=\"Sources\", lines=4)\n",
+    "\n",
+    "    with gr.Row():\n",
+    "        generate_btn = gr.Button(\"Generate Answer\", elem_classes=\"gr-button-primary\")\n",
+    "        clear_btn = gr.Button(\"Clear\", elem_classes=\"gr-button-secondary\")\n",
+    "\n",
+    "    generate_btn.click(fn=answer_query, inputs=input, outputs=[output, sources_output])\n",
+    "    clear_btn.click(fn=lambda: (\"\", \"\", \"\"), outputs=[input, output, sources_output])\n",
+    "\n",
+    "    gr.Markdown(\"#### Try asking:\")\n",
+    "    gr.Examples(\n",
+    "        examples=[\n",
+    "            \"How do I treat an oily scalp?\",\n",
+    "            \"Best practices for growing thick natural hair?\",\n",
+    "            \"How to stop breakage in relaxed hair?\"\n",
+    "        ],\n",
+    "        inputs=input,\n",
+    "        label=\"Example Questions\"\n",
+    "    )\n",
+    "\n",
+    "demo.launch(share=True)\n"
+   ]
   }
  ],
  "metadata": {
