removed local directories not accessible to render(deployement network) to decentralized space

--- a/hair_care.ipynb
+++ b/hair_care.ipynb
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.document_loaders import PyPDFDirectoryLoader\n",
+    "from langchain_community.document_loaders.url import UnstructuredURLLoader\n",
     "import re\n",
     "\n",
     "def clean_text(text):\n",
@@ -162,15 +162,29 @@
     "    text = re.sub(r\"[^A-Za-z0-9.,;:'\\\"()?!\\s-]\", \"\", text)\n",
     "    return text\n",
     "\n",
-    "directory_path = r\"C:\\Users\\ADMIN\\Desktop\\Chiemelie\\Data_Science\\final_students_projects\\hair_recommender_project\\document_folder\"\n",
-    "loader = PyPDFDirectoryLoader(directory_path)\n",
+    "\n",
+    "urls = [\n",
+    "    \n",
+    "        \"https://drive.google.com/uc?export=download&id=1kmrqkdrXcf_0ki7Ut5Ho6pAOFdVsjPE7\",\n",
+    "        \"https://drive.google.com/uc?export=download&id=1HO7EKseK6TS_UofUbCoJgb9lakXT4sVj\",\n",
+    "        \"https://drive.google.com/uc?export=download&id=1cADfcpvSJdQqIgChIY_6KsGZkjjZ7VQ6\",\n",
+    "        \"https://drive.google.com/uc?export=download&id=1WQBSv_jodZsptXXnAhFczOITh1s9MeaK\",\n",
+    "        \"https://drive.google.com/uc?export=download&id=1Rl_CmIiaib6tIQm8mGbWohdtRwd6137s\"\n",
+    "]\n",
+    "\n",
+    "loader = UnstructuredURLLoader(\n",
+    "    urls=urls,\n",
+    "    mode=\"single\",\n",
+    "    show_progress_bar=True\n",
+    ")\n",
+    "\n",
     "local_docs = loader.load()\n",
     "\n",
     "# Clean loaded local_docs\n",
     "for doc in local_docs:\n",
     "    doc.page_content = clean_text(doc.page_content)\n",
     "\n",
-    "print(f\"✅ Loaded and cleaned {len(local_docs)} documents from {directory_path}\")\n"
+    "print(f\"✅ Loaded and cleaned {len(local_docs)} documents from {urls}\")\n"
    ]
   },
   {
@@ -210,14 +224,12 @@
     "from langchain_chroma import Chroma\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
-    "embeddings = HuggingFaceEmbeddings(\n",
-    "    model_name=r\"C:\\Users\\ADMIN\\Desktop\\Chiemelie\\Data_Science\\final_students_projects\\huggingface\\all-mpnet-base-v2\"\n",
-    ")\n",
+    "embeddings = HuggingFaceEmbeddings(model_name= \"all-mpnet-base-v2\")\n",
     "\n",
     "vector_store = Chroma(\n",
     "    collection_name=\"hair_recommender_collection\",\n",
     "    embedding_function=embeddings,\n",
-    "    persist_directory=r\"C:\\Users\\ADMIN\\Desktop\\Chiemelie\\Data_Science\\final_students_projects\\hair_recommender_project\\hair_care_chroma_db\"\n",
+    "    persist_directory=\"chroma_db\"\n",
     ")\n",
     "\n",
     "vector_store.add_documents(all_splits)\n",
@@ -237,11 +249,9 @@
     "from langchain_huggingface import HuggingFacePipeline\n",
     "from transformers import pipeline, AutoTokenizer, AutoModelForSeq2SeqLM\n",
     "\n",
-    "# --- Load FLAN-T5 Model ---\n",
-    "model_path = r\"C:\\Users\\ADMIN\\Desktop\\Chiemelie\\Data_Science\\final_students_projects\\hair_recommender_project\\flan_t5_large_local\"\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(model_path)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"google/flan-t5-small\")\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(\"google/flan-t5-small\")\n",
     "\n",
     "# --- Truncation Helper ---\n",
     "def truncate_input(text, tokenizer, max_tokens=512):\n",
