converted .ipynb file to .py file for easy and safer render deployment, because of gradio code

--- a/hair_care.ipynb
+++ b/hair_care.ipynb
@@ -230,11 +230,12 @@
     "    collection_name=\"hair_recommender_collection\",\n",
     "    embedding_function=embeddings,\n",
     "    persist_directory=\"chroma_db\"\n",
-    ")\n",
+    ")# hair_venv\\Scripts\\activate\n",
     "\n",
+    "# jupyter nbconvert --to python hair_care.ipynb\n",
     "vector_store.add_documents(all_splits)\n",
     "\n",
-    "print(\"✅ Vector store successfully built and saved.\")\n"
+    "print(\"✅ Vector store successfully built and saved.\")#hair_venv\\Scripts\\activate\n"
    ]
   },
   {
